<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ForgotActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/resetpwd"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:fontFamily="sans-serif-medium"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="40dp"

        android:hint="@string/email"
        android:background="@drawable/et_bg"
        app:fontFamily="sans-serif-light"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@color/white"/>




    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonstyle"
        android:text="@string/submit_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:fontFamily="sans-serif-medium"
        android:layout_marginTop="20dp"/>

</LinearLayout>
