<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    tools:context=".MainActivity">


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottomnav"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/black"
        app:menu="@menu/menuitems"
        app:itemIconTint="@color/navcolor"
        app:itemTextColor="@color/navcolor">

    </android.support.design.widget.BottomNavigationView>

    <com.github.capur16.digitspeedviewlib.DigitSpeedView
        android:id="@+id/digiV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="148dp"
        android:paddingTop="30dp"
        app:showUnit="true"
        app:speed="5"
        app:speedTextColor="@android:color/white"
        app:speedTextSize="30dp"
        app:unitTextColor="@android:color/white"
        app:unitTextSize="15dp"/>


    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/seek"
        android:layout_below="@+id/digiV"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="wrap_content"
        android:max="45"
        android:progressTint="@color/black"
        android:minHeight="40dp"
        android:layout_marginTop="20dp"
        android:thumb="@drawable/seek6"
        />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seek"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/startBtn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:fontFamily="sans-serif-medium" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="74dp"
        android:layout_height="61dp"
        android:layout_marginStart="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="190dp"
        app:srcCompat="@drawable/run_image"
        android:contentDescription="@string/logodesc" />

    <TextView
        android:id="@+id/adjust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/digiV"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-148dp"
        android:textStyle="italic"
        android:text="@string/adjust_speed"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:fontFamily="sans-serif-medium" />




</RelativeLayout>

